integração backend e frontend

--- a/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
+++ b/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
@@ -6,9 +6,9 @@
 
 <main class="cards">
   <article class="card" *ngFor="let picture of pictures">
-    <img [src]="picture.img" alt="Sample photo">
+    <img [src]="picture.imagem" alt="Sample photo">
     <div class="text">
-      <h3>{{picture.title}}</h3>
+      <h3>{{picture.nome}}</h3>
       <p class="info">Collaboratively administrate empowered markets via plug-and-play networks.</p>
       <li class="info">Preço: {{picture.preco}}</li>
       <li class="info">Teor: {{picture.teor}}</li>
