--- a/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
+++ b/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <main class="cards">
-  <article class="card" *ngFor="let picture of pictures">
+  <article class="card" *ngFor="let cerveja of cervejas">
     <img [src]="picture.imagem" alt="Sample photo">
     <div class="text">
       <h3>{{picture.nome}}</h3>
