--- a/catalogo-bebidas/src/app/header/header.component.css
+++ b/catalogo-bebidas/src/app/header/header.component.css
@@ -29,3 +29,7 @@ ul {
     color: white;
     background-color: rgb(196, 96, 14);
   }
+  li a.adicionar {
+    color: white;
+    background-color: rgb(21, 156, 9);
+  }
