--- a/catalogo-bebidas/src/app/header/header.component.html
+++ b/catalogo-bebidas/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <ul>
-    <li><a class="active" href="#home">Catálogo de Bebidas</a></li>
-    <li><a (click)="onClickCerveja($event)">Cervejas</a></li>
-    <li><a (click)="onClickCachaca($event)">Cachaças</a></li>
-  </ul>
+  <li><a class="active" href="#home">Catálogo de Bebidas</a></li>
+  <li><a (click)="onClickCerveja($event)">Cervejas</a></li>
+  <li><a (click)="onClickCachaca($event)">Cachaças</a></li>
+  <li><a class="adicionar" (click)="onClickAdd($event)">Adicionar Bebida</a></li>
+</ul>
