--- a/catalogo-bebidas/src/app/header/header.component.html
+++ b/catalogo-bebidas/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class = "flex">
   <li><a class="active" href="#home">Catálogo de Bebidas</a></li>
   <li><a (click)="onClickCerveja($event)">Cervejas</a></li>
   <li><a (click)="onClickCachaca($event)">Cachaças</a></li>
