--- a/catalogo-bebidas/src/app/catalogo-cachaca/catalogo-cachaca.component.html
+++ b/catalogo-bebidas/src/app/catalogo-cachaca/catalogo-cachaca.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
-<main class="cards" >
+<main class="cards">
     <article class="card" *ngFor="let picture of pictures">
-      <img [src]= "picture.img" alt="Sample photo">
+      <img [src]= "picture.img" alt="Sample photo" class = "imagem-cachaca">
       <div class="text">
         <h3>{{picture.title}}</h3>
         <p class="info">Collaboratively administrate empowered markets via plug-and-play networks.</p>
