--- a/catalogo-bebidas/src/app/header/header.component.css
+++ b/catalogo-bebidas/src/app/header/header.component.css
@@ -5,6 +5,8 @@ ul {
     overflow: hidden;
     border: 1px solid #e7e7e7;
     background-color: #f3f3f3;
+    display: flex;
+    align-items: center;
   }
   
   li {
