--- a/catalogo-bebidas/src/app/tela-inicial/tela-inicial.component.css
+++ b/catalogo-bebidas/src/app/tela-inicial/tela-inicial.component.css
@@ -18,6 +18,7 @@
     bottom: 0;
     left: 0;
     text-align: center;
+    padding-top: 50px;
 }
 
 .titulo {
@@ -33,4 +34,6 @@
     text-align: center;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 20px;
+    
 }
