--- a/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
+++ b/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
@@ -6,14 +6,14 @@
 
 <main class="cards">
   <article class="card" *ngFor="let cerveja of cervejas">
-    <img [src]="picture.imagem" alt="Sample photo">
+    <img [src]="cerveja.imagem" alt="Sample photo">
     <div class="text">
-      <h3>{{picture.nome}}</h3>
+      <h3>{{cerveja.nome}}</h3>
       <p class="info">Collaboratively administrate empowered markets via plug-and-play networks.</p>
-      <li class="info">Preço: {{picture.preco}}</li>
-      <li class="info">Teor: {{picture.teor}}</li>
-      <li class="info">Quantidade: {{picture.quantidade}}</li>
-      <li class="info">Estilo: {{picture.estilo}}</li>
+      <li class="info">Preço: {{cerveja.preco}}</li>
+      <li class="info">Teor: {{cerveja.teor}}</li>
+      <li class="info">Quantidade: {{cerveja.quantidade}}</li>
+      <li class="info">Estilo: {{cerveja.estilo}}</li>
       <button class="botao-info">Here's why</button>
     </div>
   </article>
