--- a/catalogo-bebidas/src/app/cadastro-cachaca/cadastro-cachaca.component.html
+++ b/catalogo-bebidas/src/app/cadastro-cachaca/cadastro-cachaca.component.html
@@ -1,1 +1,61 @@
 <app-header></app-header>
+
+<h2 class = "titulo">Cadastrar Cachaça</h2>
+
+<form [formGroup]="form" class="formulario">
+    <div class="form-group">
+        <label for="nome">Nome da Bebida</label>
+        <input id="nome" name="nome" type="text" required="required" class="form-control" formControlName = "nome">
+    </div>
+    <div class="form-group">
+        <label for="descricao">Descrição</label>
+        <textarea id="descricao" name="descricao" required="required" cols="40" rows="5"
+            class="form-control" formControlName = "descricao"></textarea>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+            <label for="valor">Valor</label>
+            <input id="valor" name="valor" placeholder="R$" required="required" maxlength="10" type="text"
+                class="form-control" formControlName = "preco">
+        </div>
+        <div class="col-md-2">
+            <label for="teor">Teor Alcoolico</label>
+            <input id="teor" name="teor" placeholder="%" required="required" maxlength="10" type="text"
+                class="form-control" formControlName = "teor">
+        </div>
+        <div class="col-md-2">
+            <label for="quantidade">Quantidade</label>
+            <input id="quantidade" name="quantidade" placeholder="ml" required="required" maxlength="10" type="text"
+                class="form-control" formControlName = "quantidade">
+        </div>
+        <div class="col-md-3">
+            <label for="cor">Cor</label>
+            <div>
+                <select id="cor" name="cor" class="custom-select" formControlName = "cor">
+                    <option selected value="branca">Branca</option>
+                    <option value="amarela">Amarela</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-md-3">
+                <label for="madeira">Madeira</label>
+                <div>
+                    <select id="madeira" name="madeira" class="custom-select" formControlName = "madeira">
+                        <option selected value="araucaria">Araucária</option>
+                        <option value="carvalho">Carvalho</option>
+                        <option value="balsamo">Bálsamo</option>
+                        <option value="castanheira">Castanheira</option>
+                        <option value="araroba">Araroba</option>
+                        <option value="umburama">Umburama</option>
+                    </select>
+                </div>
+            </div>
+    </div>
+    <div class="form-group">
+        <label for="nome">Link da Imagem</label>
+        <input id="nome" name="nome" type="text" required="required" class="form-control" formControlName = "imagem">
+    </div>
+    <div class="form-group">
+        <button type ="submit" class="btn btn-primary" (click)="OnSubmit()">Cadastrar</button>
+    </div>
+</form>
