--- a/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
+++ b/catalogo-bebidas/src/app/catalogo-cerveja/catalogo-cerveja.component.html
@@ -1,17 +1,16 @@
 <app-header></app-header>
 
-
 <main class="cards">
   <article class="card" *ngFor="let cerveja of cervejas">
-    <img [src]="cerveja.imagem" alt="Sample photo">
+    <img [src]="cerveja.imagem" alt="Sample photo" />
     <div class="text">
-      <h3>{{cerveja.nome}}</h3>
-      <p class="info">{{cerveja.descricao}}</p>
-      <li class="info">Preço: {{cerveja.preco}}</li>
-      <li class="info">Teor: {{cerveja.teor}}</li>
-      <li class="info">Quantidade: {{cerveja.quantidade}}</li>
-      <li class="info">Estilo: {{cerveja.estilo}}</li>
-      <button class="botao-info">Editar</button>
+      <h3>{{ cerveja.nome }}</h3>
+      <p class="info">{{ cerveja.descricao }}</p>
+      <li class="info">Preço: {{ cerveja.preco }}</li>
+      <li class="info">Teor: {{ cerveja.teor }}</li>
+      <li class="info">Quantidade: {{ cerveja.quantidade }}</li>
+      <li class="info">Estilo: {{ cerveja.estilo }}</li>
+      <button class="botao-info" (click)="onEdit(cerveja.id)">Editar</button>
     </div>
   </article>
 </main>
