--- a/catalogo-bebidas/src/app/header/header.component.css
+++ b/catalogo-bebidas/src/app/header/header.component.css
@@ -1,6 +1,8 @@
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
-body { 
+body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -17,7 +19,7 @@ body {
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px; 
+  font-size: 18px;
   line-height: 25px;
   border-radius: 4px;
 }
@@ -26,7 +28,6 @@ body {
   font-size: 25px;
   font-weight: bold;
 }
-
 
 .header a.active {
   background-color: rgb(219, 134, 7);
@@ -43,12 +44,12 @@ body {
     display: block;
     text-align: left;
   }
-  
   .header-right {
     float: none;
   }
 }
-.opcao{
+
+.opcao {
   cursor: pointer;
   margin-right: 10px;
 }
