--- a/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
+++ b/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
@@ -93,8 +93,8 @@
     />
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" (click)="OnSubmit()">
-      Cadastrar
+    <button type="submit" class="btn btn-primary" (click)="OnUpdate()">
+      Salvar
     </button>
   </div>
 </form>
