correção integração - put

--- a/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
+++ b/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
@@ -75,8 +75,8 @@
           class="custom-select"
           formControlName="estilo"
         >
-          <option selected value="ale">Ale</option>
-          <option value="lager">Lager</option>
+          <option selected value="Ale">Ale</option>
+          <option value="Lager">Lager</option>
         </select>
       </div>
     </div>
@@ -93,7 +93,7 @@
     />
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" (click)="OnUpdate()">
+    <button type="submit" class="btn btn-primary" (click)="onUpdate()">
       Salvar
     </button>
   </div>
