--- a/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.css
+++ b/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.css
@@ -2,11 +2,9 @@
     margin: 30px;
 }
 
-.btn {
+.btn{
     float: right;
-    background-color: rgb(219, 134, 7);
-    border-color: rgb(219, 134, 7);
-    margin-bottom: 20px;
+    margin: 10px;
 }
 
 .titulo {
