--- a/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
+++ b/catalogo-bebidas/src/app/editar-cerveja/editar-cerveja.component.html
@@ -96,5 +96,8 @@
     <button type="submit" class="btn btn-primary" (click)="onUpdate()">
       Salvar
     </button>
+    <button type="submit" class="btn btn-danger" (click)="onDelete()">
+      Deletar
+    </button>
   </div>
 </form>
