--- a/catalogo-bebidas/src/app/header/header.component.html
+++ b/catalogo-bebidas/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="header">
-  <a href="#home" class="navbar-brand"><img src="../../assets/beerbrand.png" width="32" height="32" alt="">  Catálogo de Bebidas</a>
+  <a href="#home" class="navbar-brand"
+    ><img src="../../assets/beerbrand.png" width="32" height="32" alt="" />
+    Catálogo de Bebidas</a
+  >
   <div class="header-right">
     <a class="opcao active" (click)="onClickAdd($event)">Cadastrar</a>
     <a class="opcao" (click)="onClickCachaca($event)">Cachaças</a>
